-Fixed a bug that was adding a bunch of whitespace padding to the right side of the website. Needed to use a custom wrapper for centering the contact infographics.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -596,7 +596,7 @@ form div p{
 }
 
 /* TO DO: center this mathematically */
-#contact .wrapper{
+#contact .wrapper1{
 	position: relative;
 	left: 17%;
 }
